<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/pamaoriginal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/estilos"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:text="@string/nuestros_productos_HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <ImageView
        android:id="@+id/producto1"
        android:layout_width="254dp"
        android:layout_height="135dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/z_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Z-flip"
        style="@style/estilos"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:text="@string/oferta_1_399_990_HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />

    <Button
        android:id="@+id/button3"
        style="@style/estilos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="360dp"
        android:background="@color/colorAccent"
        android:text="@string/comprar_HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.248"
        android:drawableStart="@drawable/ic_baseline_shop"/>/>

    <ImageView
        android:id="@+id/producto2"
        android:layout_width="216dp"
        android:layout_height="161dp"
        android:layout_marginTop="336dp"
        android:src="@drawable/iphone_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_iphone_12"
        style="@style/estilos"
        android:layout_width="163dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:text="@string/oferta_1_499_990_HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <Button
        android:id="@+id/button4"
        style="@style/estilos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="112dp"
        android:background="@color/colorAccent"
        android:text="@string/comprar2__HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.248"
        android:drawableStart="@drawable/ic_baseline_shop"/>


</androidx.constraintlayout.widget.ConstraintLayout>